# ChangeLog for dev-php5/pecl-timezonedb
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-timezonedb/Attic/ChangeLog,v 1.22 2011/01/24 17:50:48 olemarkus Exp $

*pecl-timezonedb-2011.1 (24 Jan 2011)

  24 Jan 2011; <olemarkus@gentoo.org> +pecl-timezonedb-2011.1.ebuild:
  Version bump

  08 Jan 2011; Brent Baude <ranger@gentoo.org>
  pecl-timezonedb-2010.15-r1.ebuild:
  Marking pecl-timezonedb-2010.15-r1 ~ppc for bug 349659

  02 Jan 2011; Tobias Klausmann <klausman@gentoo.org>
  pecl-timezonedb-2010.15-r1.ebuild:
  Stable on alpha, bug #349659

  28 Dec 2010; Brent Baude <ranger@gentoo.org>
  pecl-timezonedb-2010.15-r1.ebuild:
  Marking pecl-timezonedb-2010.15-r1 ~ppc64 for bug 349659

  09 Nov 2010; Jeroen Roovers <jer@gentoo.org>
  pecl-timezonedb-2010.15-r1.ebuild:
  Marked ~hppa (bug #344139).

  05 Nov 2010; Markus Meier <maekke@gentoo.org>
  pecl-timezonedb-2010.15-r1.ebuild:
  add ~arm, bug #344139

*pecl-timezonedb-2010.15-r1 (04 Nov 2010)
*pecl-timezonedb-2010.15 (04 Nov 2010)

  04 Nov 2010; Matti Bickel <mabi@gentoo.org>
  -pecl-timezonedb-2010.5.ebuild, -pecl-timezonedb-2010.9.ebuild,
  +pecl-timezonedb-2010.15.ebuild, +pecl-timezonedb-2010.15-r1.ebuild:
  add version supporting minor version slotting, version bump, remove old

*pecl-timezonedb-2010.9 (29 Jul 2010)

  29 Jul 2010; Steve Dibb <beandog@gentoo.org>
  +pecl-timezonedb-2010.9.ebuild:
  Version bump

  28 Mar 2010; Javier Villavicencio <the_paya@gentoo.org>
  pecl-timezonedb-2010.5.ebuild:
  Keyworded ~x86-fbsd.

*pecl-timezonedb-2010.5 (28 Mar 2010)

  28 Mar 2010; <mabi@gentoo.org> -pecl-timezonedb-2008.1.ebuild,
  -pecl-timezonedb-2008.8.ebuild, -pecl-timezonedb-2009.21.ebuild,
  +pecl-timezonedb-2010.5.ebuild:
  remove old versions, bump to 2010.5 (bug #311695)

*pecl-timezonedb-2009.21 (01 Jan 2010)

  01 Jan 2010; Ben de Groot <yngwin@gentoo.org>
  +pecl-timezonedb-2009.21.ebuild:
  Version bump
