@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-timezonedb/Attic/pecl-timezonedb-2010.15-r1.ebuild,v 1.6 2011/01/08 18:30:04 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-timezonedb/Attic/pecl-timezonedb-2010.15-r1.ebuild,v 1.7 2011/01/30 16:49:57 armin76 Exp $
 
 EAPI=3
 
@@ -13,5 +13,5 @@ inherit php-ext-pecl-r2
 DESCRIPTION="Timezone Database to be used with PHP's date and time functions"
 LICENSE="PHP-3"
 SLOT="0"
-KEYWORDS="alpha ~amd64 ~arm ~hppa ~ppc ~ppc64 ~x86"
+KEYWORDS="alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
 IUSE=""
